# demo-gen-quickstart

./: Cargo.toml  README.md
adder_bindings/: Cargo.toml
adder_bindings/demo/: .gitignore  diplomat.config.mjs  index.html  index.mjs  package-lock.json  package.json
adder_bindings/src/: lib.rs
basic_adder/: Cargo.toml
generator/: Cargo.toml
generator/src/: main.rs
